--- a/for_parents.html
+++ b/for_parents.html
@@ -17,7 +17,7 @@
       <meta property='og:image' content='https://dhpd030vnpk29.cloudfront.net/squareLogo.png'>
       <style>
         .links:hover {
-            background-color: #6eb43f;
+            background-color: #89CCE2;
         }
 
         h1 {
@@ -31,12 +31,9 @@
 
       <div class="lessoncontent">
         <p class="lessonsubheader">What is Social Media TestDrive?</p>
-        <p>TestDrive is a platform created by researchers in the Cornell University
-          Social Media Lab, in collaboration with Common Sense Education. TestDrive
-          is an educational program that offers a simulated social media experience
-          within a safe and protected platform. Each activity teaches a set of key
-          digital citizenship concepts and allows students to practice and reflect
-          upon what they have learned.</p>
+        <p>TestDrive is a platform created by researchers in the <a class="fontbig" href="http://sml.comm.cornell.edu target=blank>Cornell University Social Media Lab</a> in collaboration with <a class="fontbig" href="commonsense.org/education/" target=blank>Common Sense Education.</a></p>
+        <p>TestDrive is an educational program that offers a number of modules about key digital citizenship topics, such as managing privacy settings, smart self-presentation, upstanding to cyberbullying, and news literacy.</p>
+        <p>Each TestDrive module teaches a set of digital citizenship concepts and allows youth to practice and reflect upon what they have learned using a simulated social media experience within a safe and protected platform.</p>
         <p class="lessonsubheader">Can I use TestDrive at home with my child?</p>
         <p>Yes, we encourage parents to try out TestDrive with their children! All
           TestDrive modules can be a self-guided activity, but you can also go through
