--- a/for_parents.html
+++ b/for_parents.html
@@ -31,7 +31,7 @@
 
       <div class="lessoncontent">
         <p class="lessonsubheader">What is Social Media TestDrive?</p>
-        <p>TestDrive is a platform created by researchers in the <a class="fontbig" href="http://sml.comm.cornell.edu target=blank>Cornell University Social Media Lab</a> in collaboration with <a class="fontbig" href="commonsense.org/education/" target=blank>Common Sense Education.</a></p>
+        <p>TestDrive is a platform created by researchers in the <a class="fontbig" href="http://sml.comm.cornell.edu" target=blank>Cornell University Social Media Lab</a> in collaboration with <a class="fontbig" href="commonsense.org/education/" target=blank>Common Sense Education.</a></p>
         <p>TestDrive is an educational program that offers a number of modules about key digital citizenship topics, such as managing privacy settings, smart self-presentation, upstanding to cyberbullying, and news literacy.</p>
         <p>Each TestDrive module teaches a set of digital citizenship concepts and allows youth to practice and reflect upon what they have learned using a simulated social media experience within a safe and protected platform.</p>
         <p class="lessonsubheader">Can I use TestDrive at home with my child?</p>
