--- a/for_parents.html
+++ b/for_parents.html
@@ -27,35 +27,25 @@
 
       <div class="lessoncontent">
         <p class="lessonsubheader">What is Social Media TestDrive?</p>
-        <p>TestDrive is a platform created by researchers in the <a class="fontbig" href="http://sml.comm.cornell.edu" target=blank>Cornell University Social Media Lab</a> in collaboration with <a class="fontbig" href="commonsense.org/education/" target=blank>Common Sense Education.</a></p>
-        <p>TestDrive is an educational program that offers a number of modules about key digital citizenship topics, such as managing privacy settings, smart self-presentation, upstanding to cyberbullying, and news literacy.</p>
-        <p>Each TestDrive module teaches a set of digital citizenship concepts and allows youth to practice and reflect upon what they have learned using a simulated social media experience within a safe and protected platform.</p>
+          <p>TestDrive is a platform created by researchers in the <a class="fontbig" href="http://sml.comm.cornell.edu" target=blank>Cornell University Social Media Lab</a> in collaboration with <a class="fontbig" href="http://commonsense.org/education/" target=blank>Common Sense Education.</a></p>
+          <p>TestDrive is an educational program that offers a number of modules about key digital citizenship topics, such as managing privacy settings, smart self-presentation, upstanding to cyberbullying, and news literacy.</p>
+          <p>Each TestDrive module teaches a set of digital citizenship concepts and allows youth to practice and reflect upon what they have learned using a simulated social media experience within a safe and protected platform.</p>
+        <p class="lessonsubheader">Who is TestDrive for?</p>
+          <p>TestDrive is for middle school-aged youth (ages 9–13) who are new to or not yet engaged with social media, but may enter into the social media world in the near future.</p>
+          <p>Children at these ages are aware of and likely becoming interested in social media, but are unlikely to have their own social media accounts, since most social media platforms require members to be at least 13 years old. This is a great time to learn the prosocial skills and behaviors in TestDrive.</p>
         <p class="lessonsubheader">Can I use TestDrive at home with my child?</p>
-        <p>Yes, we encourage parents to try out TestDrive with their children! All
-          TestDrive modules can be a self-guided activity, but you can also go through
-          modules together with your child. You can access TestDrive modules at the
-          following link: <a href="http://app.socialmediatestdrive.org">http://app.socialmediatestdrive.org</a>.
-          Please see our “Lessons” page for a short description of each TestDrive module.</p>
+          <p>Absolutely!</p>
+          <p>All TestDrive modules are designed so that children can complete them by themselves, but we encourage parents to try out and discuss TestDrive with their children. The reflection questions at the end of each module are a great opportunity to have a deeper discussion of the material.</p>
+          <p>If you want to check TestDrive out before trying it with your child, you are welcome to try some of the <a class="fontbig" href="https://socialmediatestdrive.org/lessons.html">modules yourself.</a></p>
         <p class="lessonsubheader">How does a TestDrive module work?</p>
-        <p>In a TestDrive module, children will first learn key terms and practice
-          social mediaskills in a guided setting. Then, children get to explore a
-          simulated social media site where they are able to interact with the
-          timeline, create their own posts, and get further practice in social
-          media skills. The final activity in the module will be a reflection
-          page with questions about what children did on the simulated social
-          media site, as well as questions for discussion.</p>
+          <p>In a TestDrive module, young people first learn key terms and practice social media skills in a guided setting. Then, they explore a simulated social media site where they interact with content designed to provide opportunities to further practice their new social media skills. The final section in the module is a reflection activity where learners answer questions designed to help them reflect on what they learned and how they can apply their learning in real life.</p>
         <p class="lessonsubheader">How can I see my child’s progress?</p>
-        <p>At the end of the reflection page, there is a feature (“Print your
-          responses”) that enables children to save or print their responses to
-          the reflection questions. You can ask your child to print out the responses
-           or save them as a PDF file on the computer. You can review the responses
-           to see how well your child is understanding the module content.</p>
-        <p class="lessonsubheader">What else do I need to know?</p>
-        <p>We encourage you to keep the conversation going about responsible social
-          media use! Young people can learn a lot from talking with parents about
-          social media, so we recommend using TestDrive as a tool to generate
-          meaningful discussions about social media use.</p>
-
+          <p>At the end of the reflection page, there is a feature (“Print your responses”) that enables young people to save or print their responses to the reflection questions. You can review the responses to see how well your child is understanding the module content. You can also use the reflection questions at the end of each module to have discussions with youth to promote a deeper engagement with the material.</p>
+        <p class="lessonsubheader">Will my child’s data be safe?</p>
+          <p>TestDrive does not collect or store any personal information. Young people are able to choose from a library of photos when creating posts, upload text, make comments on the simulated social media site, and change their profile name, location, and description, but all data are permanently deleted once users finish a module or leave the TestDrive website. We take privacy and safety seriously; see our <a class="fontbig" href="https://app.socialmediatestdrive.org/privacy" target=blank>privacy policy</a> for more details.</p>
+        <p class="lessonsubheader">Any questions?</p>
+          <p>We hope you and your child like TestDrive and find it valuable. TestDrive can be a great tool to generate meaningful discussions about responsible social media use. We encourage you to use this tool to keep the conversation going at home! Please contact us at <a class="fontbig" href="mailto:socialmediatestdrive@gmail.com">socialmediatestdrive@gmail.com</a> or using the form below if you have any questions or comments.</p>
+          <p><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfSOPFQg3o0TozaSkPqiGd9TY2F9SdLckJwwd78LZJECjiNVw/viewform?embedded=true" width="640" height="474" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></p>
       </div>
 
       <div id="bottomNav"></div>
