--- a/for_educators.html
+++ b/for_educators.html
@@ -19,12 +19,9 @@
       <div id="topNav"></div>
       <div class="lessonheader"><h1 class="lessontitle">For Educators</h1></div>
       <div class="lessoncontent">
-        <p class="lessonsubheader">Social Media TestDrive for Educators</p>
-        <p>Social Media TestDrive is an educational program that offers a simulated
-          social media experience within a safe and protected platform. Each activity
-          teaches a set of key digital citizenship concepts and allows students to
-          practice and reflect upon what they have learned.</p>
-        <p>Educator guide coming soon!</p>
+        <p class="lessonsubheader">Educator Guide</p>
+          <p>Welcome to Social Media TestDrive, an educational program for teaching digital citizenship skills and online prosocial behaviors! TestDrive prepares young people for real-life experiences in the digital world through learning and practicing within a realistic social media simulation.</p>
+          <button id="homePage_button" type="button">Educator guide coming soon!</button>
       </div>
 
       <div id="bottomNav"></div>
