--- a/about_us.html
+++ b/about_us.html
@@ -20,25 +20,22 @@
       <div class="lessonheader"><h1 class="lessontitle">About Social Media TestDrive</h1></div>
       <div class="lessoncontent">
         <p class="lessonsubheader">Mission Statement</p>
-        <p>Social Media TestDrive empowers youth to become prosocial, productive members of the digitalworld through
-          media literacy education and experiential learning in a protected yet realistic simulated social media environment.</p>
+          <p>Social Media TestDrive encourages youth to become prosocial, productive members of the digital world through digital citizenship education and experiential learning in a simulated, realistic social media environment.</p>
+        <p class="lessonsubheader">vision Statement</p>
+          <p>Our vision is a kind, safe social media world in which people connect and engage in prosocial ways.</p>
         <p class="lessonsubheader">About Social Media TestDrive</p>
-        <p>Social Media TestDrive is a platform created by researchers in the Cornell University Social Media Lab, in collaboration
-          with Common Sense Education, the Program for Research in Youth Development and Engagement, and New
-          York State 4-H educators. The project is generously supported by the Morgan Family Foundation. Like a driving simulator for
-          young people learning to drive for the first time, TestDrive is a social media simulation designed to let students learn
-          about and practice social media skills. TestDrive looks and feels like a real social media site, butall the other users on
-          the site are “bots” that post content created by the research team. As a result, students can practice important social media
-          skills in a safe and realistic environment without worrying about the consequences of making mistakes.</p>
-        <p>Each TestDrive module is designed to teach a specific social media skill, such as managing privacy settings, smart self-presentation,
-          upstanding to cyberbullying, and information literacy. A TestDrive module consists of four parts. First, students will learn key terms,
-          ideas, and behaviors related to the topic of the module. Afterwards, students get a chance to practice the behaviors in a guided setting.
-          Then, students get to explore a simulated social media site wherethey are able to interact with the timeline, create their own posts,
-          and get further practice in social media skills. The final activity in the module is a reflection page with questions about whatstudents
-          did on the simulated social media site, as well as additional questions for reflection.</p>
-        <p>You can access TestDrive modules at the following link: <a class="fontbig" href="http://app.socialmediatestdrive.org" target=blank>http://app.socialmediatestdrive.org</a>.
-          For instructions on how to use TestDrive, please check out the “For Educators” and “For Parents” sections of our website.
-          Please <a class="fontbig" href="mailto:socialmediatestdrive@gmail.com">contact us</a> if you have any questions!</p>
+          <p>Social Media TestDrive is an interactive educational platform created by researchers in the <a class="fontbig" href="http://sml.comm.cornell.edu" target=blank>Cornell University Social Media Lab</a> in collaboration with <a class="fontbig" href="https://www.commonsense.org/education/" target=blank>Common Sense Education</a>.</p>
+          <p>TestDrive is an educational program that lets young people learn and practice digital citizenship skills through a social media simulation. Like a driving simulator for young people learning to drive a car for the first time, TestDrive provides a simulated experience of realistic digital dilemmas and scenarios that young people may encounter as they enter the social media world.</p>
+          <p>TestDrive looks and feels like a real social media site, but all the content on the site has been created for instructional purposes. Young people interact with the content through instructions that lead them to build new knowledge and skills, allowing them to practice important social media skills without worrying about negative consequences.</p>
+          <p>Each TestDrive module is designed to teach a specific social media skill, such as managing privacy settings, smart self-presentation, upstanding to cyberbullying, and news literacy. A TestDrive module consists of four parts:</p>
+          <ul>
+              <li>Key concepts, where learners are exposed to key terms, ideas, and behaviors related to the topic of the module.</li>
+              <li>Guided interaction with those key concepts, where learners practice the behaviors by following purposefully sequenced instructions.</li>
+              <li>A “free-play” area, where learners use a realistic social media platform design to interact with simulated posts designed to engage new knowledge and skills.</li>
+              <li>Reflection on what they learned, where learners answer questions designed to help them reflect on what they learned and how they can apply their learning in real life.</li>
+          </ul>
+          <p>You can access TestDrive modules at the following link: <a class="fontbig" href="http://app.socialmediatestdrive.org" target=blank>http://app.socialmediatestdrive.org</a>. For instructions on how to use TestDrive, please refer to the "<a class="fontbig" href="https://socialmediatestdrive.org/for_educators.html">"For Educators"</a> and <a class="fontbig" href="https://socialmediatestdrive.org/for_parents.html">"For Parents"</a> sections of our website.</p>
+          <p>Please contact us at <a class="fontbig" href="mailto:socialmediatestdrive@gmail.com">socialmediatestdrive@gmail.com</a> if you have any questions!</p>
       </div>
 
       <div id="bottomNav"></div>
