--- a/about_us.html
+++ b/about_us.html
@@ -25,17 +25,26 @@
           <p>Our vision is a kind, safe social media world in which people connect and engage in prosocial ways.</p>
         <p class="lessonsubheader">About Social Media TestDrive</p>
           <p>Social Media TestDrive is an interactive educational platform created by researchers in the <a class="fontbig" href="http://sml.comm.cornell.edu" target=blank>Cornell University Social Media Lab</a> in collaboration with <a class="fontbig" href="https://www.commonsense.org/education/" target=blank>Common Sense Education</a>.</p>
-          <p>TestDrive is an educational program that lets young people learn and practice digital citizenship skills through a social media simulation. Like a driving simulator for young people learning to drive a car for the first time, TestDrive provides a simulated experience of realistic digital dilemmas and scenarios that young people may encounter as they enter the social media world.</p>
+          <p>TestDrive is an educational program that lets young people learn and practice digital citizenship skills through a social media simulation. Like a driving simulator for young people learning to drive a car for the first time, TestDrive provides a simulated experience of realistic digital dilemmas and scenarios that young people may encounter as they enter the social media world. Each TestDrive module is designed to teach a specific social media skill, such as managing privacy settings, smart self-presentation, upstanding to cyberbullying, and news literacy.</p>
           <p>TestDrive looks and feels like a real social media site, but all the content on the site has been created for instructional purposes. Young people interact with the content through instructions that lead them to build new knowledge and skills, allowing them to practice important social media skills without worrying about negative consequences.</p>
-          <p>Each TestDrive module is designed to teach a specific social media skill, such as managing privacy settings, smart self-presentation, upstanding to cyberbullying, and news literacy. A TestDrive module consists of four parts:</p>
-          <ul>
-              <li>Key concepts, where learners are exposed to key terms, ideas, and behaviors related to the topic of the module.</li>
-              <li>Guided interaction with those key concepts, where learners practice the behaviors by following purposefully sequenced instructions.</li>
-              <li>A “free-play” area, where learners use a realistic social media platform design to interact with simulated posts designed to engage new knowledge and skills.</li>
-              <li>Reflection on what they learned, where learners answer questions designed to help them reflect on what they learned and how they can apply their learning in real life.</li>
-          </ul>
           <p>You can access TestDrive modules at the following link: <a class="fontbig" href="http://app.socialmediatestdrive.org" target=blank>http://app.socialmediatestdrive.org</a>. For instructions on how to use TestDrive, please refer to the "<a class="fontbig" href="https://socialmediatestdrive.org/for_educators.html">"For Educators"</a> and <a class="fontbig" href="https://socialmediatestdrive.org/for_parents.html">"For Parents"</a> sections of our website.</p>
           <p>Please contact us at <a class="fontbig" href="mailto:socialmediatestdrive@gmail.com">socialmediatestdrive@gmail.com</a> if you have any questions!</p>
+        <p class="lessonsubheader">The Team</p>
+          <p><b>Program Director: Dr. Natalie Bazarova.</b> Dr. Bazarova is an Associate Professor in the Department of Communication and the Director of the Social Media Lab at Cornell University.</p>
+          <p><b>Program Advisor: Dr. Janis Whitlock.</b> Dr. Whitlock is a Research Scientist at Cornell's Bronfenbrenner Center for Translational Research and the Director of The Cornell Research Program on Self-Injury and Recovery.</p>
+          <p><b>Content Director and Project Manager: Dr. Yoon Hyung Choi.</b> Dr. Choi is a Postdoctoral Associate in the Department of Communication at Cornell University.</p>
+          <p><b>Technical Director: Dr. Dominic DiFranzo.</b> Dr. DiFranzo is an Assistant Professor at Lehigh University.</p>
+          <p><b>Evaluation Director: Amanda Purington.</b> Amanda is the Director of Evaluation and Research at ACT for Youth and a graduate student in the Department of Communication at Cornell University.</p>
+          <p><b>Application Developer: Anna Spring.</b> Anna is an Applications Programmer in the Department of Communication at Cornell University.</p>
+          <p><b>Development and Testing of TestDrive Prototype</b></p>
+          <p>Jessie Taft, Rhoda Meador, Program for Research on Youth Development and Engagement (PRYDE), Bronfenbrenner Center for Translational Research, and NYS 4-H educators.</p>
+          <p><b>Curriculum and Content Development</b></p>
+          <p>Carmen Chan, Richa Deshpande, Danielle Freedman, Brenna Garcia, Yanni Kaldis, Molly Nagel, Giesha Nunez, Alex Rauter, Emily Schemerhorn, Yutong Zhou, Erin Chen, Kelly Stone, Colton Zuvich, and Ashley Win.</p>
+          <p><b>Website Development</b></p>
+          <p>Nika Ablao, Carina Crabbe, Sierra Stone, Cindy Xu, Hyun Seo (Lucy) Lee, and Dan Cosley.</p>
+          <p><b>Sponsors</b></p>
+          <p>Social Media TestDrive is supported by the generosity of the Morgan Family Foundation and National Science Foundation award #1405634.</p>
+
       </div>
 
       <div id="bottomNav"></div>
