--- a/about_us.html
+++ b/about_us.html
@@ -21,13 +21,13 @@
       <div class="lessoncontent">
         <p class="lessonsubheader">Mission Statement</p>
           <p>Social Media TestDrive encourages youth to become prosocial, productive members of the digital world through digital citizenship education and experiential learning in a simulated, realistic social media environment.</p>
-        <p class="lessonsubheader">vision Statement</p>
+        <p class="lessonsubheader">Vision Statement</p>
           <p>Our vision is a kind, safe social media world in which people connect and engage in prosocial ways.</p>
         <p class="lessonsubheader">About Social Media TestDrive</p>
           <p>Social Media TestDrive is an interactive educational platform created by researchers in the <a class="fontbig" href="http://sml.comm.cornell.edu" target=blank>Cornell University Social Media Lab</a> in collaboration with <a class="fontbig" href="https://www.commonsense.org/education/" target=blank>Common Sense Education</a>.</p>
           <p>TestDrive is an educational program that lets young people learn and practice digital citizenship skills through a social media simulation. Like a driving simulator for young people learning to drive a car for the first time, TestDrive provides a simulated experience of realistic digital dilemmas and scenarios that young people may encounter as they enter the social media world. Each TestDrive module is designed to teach a specific social media skill, such as managing privacy settings, smart self-presentation, upstanding to cyberbullying, and news literacy.</p>
           <p>TestDrive looks and feels like a real social media site, but all the content on the site has been created for instructional purposes. Young people interact with the content through instructions that lead them to build new knowledge and skills, allowing them to practice important social media skills without worrying about negative consequences.</p>
-          <p>You can access TestDrive modules at the following link: <a class="fontbig" href="http://app.socialmediatestdrive.org" target=blank>http://app.socialmediatestdrive.org</a>. For instructions on how to use TestDrive, please refer to the "<a class="fontbig" href="https://socialmediatestdrive.org/for_educators.html">"For Educators"</a> and <a class="fontbig" href="https://socialmediatestdrive.org/for_parents.html">"For Parents"</a> sections of our website.</p>
+          <p>You can access TestDrive modules at the following link: <a class="fontbig" href="http://app.socialmediatestdrive.org" target=blank>http://app.socialmediatestdrive.org</a>. For instructions on how to use TestDrive, please refer to the "<a class="fontbig" href="https://socialmediatestdrive.org/for_educators.html">For Educators</a>" and "<a class="fontbig" href="https://socialmediatestdrive.org/for_parents.html">For Parents</a>" sections of our website.</p>
           <p>Please contact us at <a class="fontbig" href="mailto:socialmediatestdrive@gmail.com">socialmediatestdrive@gmail.com</a> if you have any questions!</p>
         <p class="lessonsubheader">The Team</p>
           <p><b>Program Director: Dr. Natalie Bazarova.</b> Dr. Bazarova is an Associate Professor in the Department of Communication and the Director of the Social Media Lab at Cornell University.</p>
@@ -42,7 +42,7 @@
           <p>Carmen Chan, Richa Deshpande, Danielle Freedman, Brenna Garcia, Yanni Kaldis, Molly Nagel, Giesha Nunez, Alex Rauter, Emily Schemerhorn, Yutong Zhou, Erin Chen, Kelly Stone, Colton Zuvich, and Ashley Win.</p>
           <p><b>Website Development</b></p>
           <p>Nika Ablao, Carina Crabbe, Sierra Stone, Cindy Xu, Hyun Seo (Lucy) Lee, and Dan Cosley.</p>
-          <p><b>Sponsors</b></p>
+        <p class="lessonsubheader">Sponsors</p>
           <p>Social Media TestDrive is supported by the generosity of the Morgan Family Foundation and National Science Foundation award #1405634.</p>
 
       </div>
