--- a/faq.html
+++ b/faq.html
@@ -17,26 +17,13 @@
     </head>
     <body>
       <div id="topNav"></div>
-      <div class="lessonheader"><h1 class="lessontitle">FAQs</h1></div>
+      <div class="lessonheader"><h1 class="lessontitle">FAQs / Contact Us</h1></div>
       <div class="lessoncontent">
         <p class="lessonsubheader">What should I do if I run into a problem while using TestDrive?</p>
-        <p>If you have any questions about TestDrive or run into any problems while using
-          it, please e-mail us at socialmediatestdrive@gmail.com. We will do our best to
-          respond within 1-2 business days of receiving your e-mail.</p>
-        <p class="lessonsubheader">What is in a TestDrive module?</p>
-        <p>A TestDrive module consists of four parts. First, students will learn key
-          terms, ideas, and behaviors related to the topic of the module. Afterwards,
-          students get a chance to practice the behaviors in a guided setting. Then,
-          students get to explore a simulated social media site where they are able
-          to interact with the timeline, create their own posts, and get further
-          practice in social media skills. The final activity in the module will be
-          a reflection page with questions about what students did on the simulated
-          social media site, as well as questions for discussion.</p>
-        <p class="lessonsubheader">How does TestDrive keep children's data safe?</p>
-        <p>TestDrive does not collect personal information. Students can upload pictures
-          and text into the simulated social media site, but all uploaded data is
-          permanently deleted once the user finishes a module or leaves the TestDrive 
-            website. Click <a class="fontbig" href="https://app.socialmediatestdrive.org/privacy">here</a> to read our privacy policy.</p>
+          <p>If you have any questions about TestDrive or run into any problems while using it, please e-mail us at <a class="fontbig" href="mailto:socialmediatestdrive@gmail.com">socialmediatestdrive@gmail.com</a> or use the Contact Us form below. We will do our best to respond within 1–2 business days of receiving your e-mail.</p>
+        <p class="lessonsubheader">How does TestDrive keep young people's data safe?</p>
+        <p>TestDrive does not collect or store any personal information. Young people are able to choose from a library of photos when creating posts, upload text, make comments on the simulated social media site, and change their profile name, location, and description, but all data are permanently deleted once users finish a module or leave the TestDrive website. Click <a class="fontbig" href="https://app.socialmediatestdrive.org/privacy">here</a> to read our privacy policy.</p>
+        <p class="lessonsubheader">Contact Us</p>
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfSOPFQg3o0TozaSkPqiGd9TY2F9SdLckJwwd78LZJECjiNVw/viewform?embedded=true" width="640" height="474" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
 
