--- a/for_parents.html
+++ b/for_parents.html
@@ -27,16 +27,16 @@
 
       <div class="lessoncontent">
         <p class="lessonsubheader">What is Social Media TestDrive?</p>
-          <p>TestDrive is a platform created by researchers in the <a class="fontbig" href="http://sml.comm.cornell.edu" target=blank>Cornell University Social Media Lab</a> in collaboration with <a class="fontbig" href="http://commonsense.org/education/" target=blank>Common Sense Education.</a></p>
           <p>TestDrive is an educational program that offers a number of modules about key digital citizenship topics, such as managing privacy settings, smart self-presentation, upstanding to cyberbullying, and news literacy.</p>
           <p>Each TestDrive module teaches a set of digital citizenship concepts and allows youth to practice and reflect upon what they have learned using a simulated social media experience within a safe and protected platform.</p>
+          <p>TestDrive was created by researchers in the <a class="fontbig" href="http://sml.comm.cornell.edu" target=blank>Cornell University Social Media Lab</a> in collaboration with <a class="fontbig" href="http://commonsense.org/education/" target=blank>Common Sense Education.</a></p>
         <p class="lessonsubheader">Who is TestDrive for?</p>
           <p>TestDrive is for middle school-aged youth (ages 9–13) who are new to or not yet engaged with social media, but may enter into the social media world in the near future.</p>
           <p>Children at these ages are aware of and likely becoming interested in social media, but are unlikely to have their own social media accounts, since most social media platforms require members to be at least 13 years old. This is a great time to learn the prosocial skills and behaviors in TestDrive.</p>
         <p class="lessonsubheader">Can I use TestDrive at home with my child?</p>
           <p>Absolutely!</p>
           <p>All TestDrive modules are designed so that children can complete them by themselves, but we encourage parents to try out and discuss TestDrive with their children. The reflection questions at the end of each module are a great opportunity to have a deeper discussion of the material.</p>
-          <p>If you want to check TestDrive out before trying it with your child, you are welcome to try some of the <a class="fontbig" href="https://socialmediatestdrive.org/lessons.html">modules yourself.</a></p>
+          <p>If you want to check TestDrive out before trying it with your child, you are welcome to try some of the <a class="fontbig" href="https://socialmediatestdrive.org/lessons.html">modules</a> yourself.</p>
         <p class="lessonsubheader">How does a TestDrive module work?</p>
           <p>In a TestDrive module, young people first learn key terms and practice social media skills in a guided setting. Then, they explore a simulated social media site where they interact with content designed to provide opportunities to further practice their new social media skills. The final section in the module is a reflection activity where learners answer questions designed to help them reflect on what they learned and how they can apply their learning in real life.</p>
         <p class="lessonsubheader">How can I see my child’s progress?</p>
