--- a/for_educators.html
+++ b/for_educators.html
@@ -21,7 +21,7 @@
       <div class="lessoncontent">
         <p class="lessonsubheader">Educator Guide</p>
           <p>Welcome to Social Media TestDrive, an educational program for teaching digital citizenship skills and online prosocial behaviors! TestDrive prepares young people for real-life experiences in the digital world through learning and practicing within a realistic social media simulation.</p>
-          <button id="eduguide_button" type="button">Educator guide coming soon!</button>
+          <a href="testdriveguide.pdf" class="eduguide_button">Click here to access the educator guide!</a>
       </div>
 
       <div id="bottomNav"></div>
