--- a/about_us.html
+++ b/about_us.html
@@ -19,6 +19,7 @@
       <div id="topNav"></div>
       <div class="lessonheader"><h1 class="lessontitle">About Social Media TestDrive</h1></div>
       <div class="lessoncontent">
+        <img src="img/smllogo.png><img src="img/cselogo.png">
         <p class="lessonsubheader">Mission Statement</p>
           <p>Social Media TestDrive encourages youth to become prosocial, productive members of the digital world through digital citizenship education and experiential learning in a simulated, realistic social media environment.</p>
         <p class="lessonsubheader">Vision Statement</p>
