--- a/about_us.html
+++ b/about_us.html
@@ -19,7 +19,7 @@
       <div id="topNav"></div>
       <div class="lessonheader"><h1 class="lessontitle">About Social Media TestDrive</h1></div>
       <div class="lessoncontent">
-        <img src="img/smllogo.png" alt="Social Media Lab"><img src="img/cselogo.png" alt="Common Sense Education">
+        <img style="max-height: 90px; width: auto;" src="img/smllogo.png" alt="Social Media Lab"><img style="max-height: 90px; width: auto;" src="img/cselogo.png" alt="Common Sense Education" hspace="20">
         <p class="lessonsubheader">Mission Statement</p>
           <p>Social Media TestDrive encourages youth to become prosocial, productive members of the digital world through digital citizenship education and experiential learning in a simulated, realistic social media environment.</p>
         <p class="lessonsubheader">Vision Statement</p>
