--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div class="right_half">
             <h1>Learn digital citizenship skills through a social media simulation</h1>
             <h4>Social Media TestDrive lets students practice digital citizenship skills within a safe and protected platform.</h4>
-            <button id="homePage_button" type="button" onclick="window.location.href = 'lessons.html';">View Our Lessons </button>
+            <button id="homePage_button" type="button" onclick="window.location.href = 'lessons.html';">View all of our modules </button>
           </div>
         </div>
 
