--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>TestDrive</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Open+Sans" rel="stylesheet">
-        <link rel="shortcut icon" href="/img/logo.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon" />
         <meta name='twitter:card' content="summary">
         <meta name='twitter:title' content="Social Media TestDrive">
         <meta name='twitter:description' content="Welcome to the Social Media TestDrive official website!">
@@ -22,7 +22,19 @@
         </style>
     </head>
     <body>
-       <div id="topNav"></div>
+      <div class="customClassTwo">
+        <div id="logoCont">
+          <a id="logo" href="index.html"><img src="img/logo.png" alt="logo">   Social Media TestDrive</a>
+        </div>
+        <div id="linksCont">
+          <a class="customlinks" href="about_us.html"><p>About</p></a>
+          <a class="customlinks" href="lessons.html"><p>Lessons</p></a>
+          <a class="customlinks" href="for_educators.html"><p>For Educators</p></a>
+          <a class="customlinks" href="for_parents.html"><p>For Parents</p></a>
+          <a class="customlinks" href="team.html"><p>The Team</p></a>
+          <a class="customlinks" href="faq.html"><p>FAQs</p><a>
+        </div>
+      </div>
 
        <div id="container">
         <div id="homePage_s1" class="section1">
@@ -32,7 +44,7 @@
           <div class="right_half">
             <h1>Learn digital citizenship skills through a social media simulation</h1>
             <h4>Social Media TestDrive lets students practice digital citizenship skills within a safe and protected platform.</h4>
-            <button id="homePage_button" type="button" onclick="window.location.href = 'lessons.html';">View all of our modules </button>
+            <button id="homePage_button" type="button" onclick="window.location.href = 'lessons.html';">View Our Lessons </button>
           </div>
         </div>
 
@@ -129,8 +141,23 @@
           <a class="lesson_button" href="lessons.html">View all our lessons >></a>
         </div>
       </div>
-      <div id="bottomNav"></div>
-      <script src="nav.js"></script>
+
+      <div class="customClass">
+        <div class="footCont_title"><a class="fTL" href="../index.html"><p class="footertitle">Social Media</p><p class="footertitle">TestDrive</p><a></div>
+        <div class="footCont_links">
+          <a class="footerlinks" href="terms.html"><p>Terms & Copyright</p><a>
+          <a class="footerlinks" href="faq.html"><p>FAQs</p><a>
+          <a class="footerlinks" href="team.html"><p>The Team</p></a>
+          <a class="footerlinks" href="for_parents.html"><p>For Parents</p></a>
+          <a class="footerlinks" href="for_educators.html"><p>For Educators</p></a>
+          <a class="footerlinks" href="lessons.html"><p>Lessons</p></a>
+          <a class="footerlinks" href="about_us.html"><p>About</p></a>
+        </div>
+      </div>
+
+
+
+      <!--<script src="nav.js"></script>-->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
