--- a/about_us.html
+++ b/about_us.html
@@ -31,20 +31,20 @@
           <p>You can access TestDrive modules at the following link: <a class="fontbig" href="http://app.socialmediatestdrive.org" target=blank>http://app.socialmediatestdrive.org</a>. For instructions on how to use TestDrive, please refer to the "<a class="fontbig" href="https://socialmediatestdrive.org/for_educators.html">For Educators</a>" and "<a class="fontbig" href="https://socialmediatestdrive.org/for_parents.html">For Parents</a>" sections of our website.</p>
           <p>Please contact us at <a class="fontbig" href="mailto:socialmediatestdrive@gmail.com">socialmediatestdrive@gmail.com</a> if you have any questions!</p>
         <p class="lessonsubheader">The Team</p>
-          <p><b>Program Director: Dr. Natalie Bazarova.</b> Dr. Bazarova is an Associate Professor in the Department of Communication and the Director of the Social Media Lab at Cornell University.</p>
-          <p><b>Program Advisor: Dr. Janis Whitlock.</b> Dr. Whitlock is a Research Scientist at Cornell's Bronfenbrenner Center for Translational Research and the Director of The Cornell Research Program on Self-Injury and Recovery.</p>
-          <p><b>Content Director and Project Manager: Dr. Yoon Hyung Choi.</b> Dr. Choi is a Postdoctoral Associate in the Department of Communication at Cornell University.</p>
-          <p><b>Technical Director: Dr. Dominic DiFranzo.</b> Dr. DiFranzo is an Assistant Professor at Lehigh University.</p>
-          <p><b>Evaluation Director: Amanda Purington.</b> Amanda is the Director of Evaluation and Research at ACT for Youth and a graduate student in the Department of Communication at Cornell University.</p>
-          <p><b>Application Developer: Anna Spring.</b> Anna is an Applications Programmer in the Department of Communication at Cornell University.</p>
+          <p><b>Program Director: <a class="fontbig" href="http://sml.comm.cornell.edu/people/#director" target=blank>Dr. Natalie Bazarova.</a></b> Dr. Bazarova is an Associate Professor in the Department of Communication and the Director of the Social Media Lab at Cornell University.</p>
+          <p><b>Program Advisor: <a class="fontbig" href="https://www.human.cornell.edu/people/jlw43" target=blank>Dr. Janis Whitlock</a>.</b> Dr. Whitlock is a Research Scientist at Cornell's Bronfenbrenner Center for Translational Research and the Director of The Cornell Research Program on Self-Injury and Recovery.</p>
+          <p><b>Content Director and Project Manager: <a class="fontbig" href="https://communication.cals.cornell.edu/people/yoon-choi/" target=blank>Dr. Yoon Hyung Choi</a>.</b> Dr. Choi is a Postdoctoral Associate in the Department of Communication at Cornell University.</p>
+          <p><b>Technical Director: <a class="fontbig" href="https://difranzo.com/" target=blank>Dr. Dominic DiFranzo</a>.</b> Dr. DiFranzo is an Assistant Professor at Lehigh University.</p>
+          <p><b>Evaluation Director: <a class="fontbig" href="https://communication.cals.cornell.edu/people/amanda-purington/" target=blank>Amanda Purington</a>.</b> Amanda is the Director of Evaluation and Research at ACT for Youth and a graduate student in the Department of Communication at Cornell University.</p>
+          <p><b>Application Developer: <a class="fontbig" href="https://communication.cals.cornell.edu/people/anna-spring/" target=blank>Anna Spring</a>.</b> Anna is an Applications Programmer in the Department of Communication at Cornell University.</p>
           <p><b>Development and Testing of TestDrive Prototype</b></p>
-          <p>Jessie Taft, Rhoda Meador, Program for Research on Youth Development and Engagement (PRYDE), Bronfenbrenner Center for Translational Research, and NYS 4-H educators.</p>
+          <p>Jessie Taft, Rhoda Meador, <a class="fontbig" href="https://pryde.bctr.cornell.edu/" target=blank>Program for Research on Youth Development and Engagement (PRYDE)</a>, <a class="fontbig" href="https://www.bctr.cornell.edu/" target=blank>Bronfenbrenner Center for Translational Research, and <a class="fontbig" href="https://nys4-h.org/" target=blank>NYS 4-H</a> educators.</p>
           <p><b>Curriculum and Content Development</b></p>
           <p>Carmen Chan, Richa Deshpande, Danielle Freedman, Brenna Garcia, Yanni Kaldis, Molly Nagel, Giesha Nunez, Alex Rauter, Emily Schemerhorn, Yutong Zhou, Erin Chen, Kelly Stone, Colton Zuvich, and Ashley Win.</p>
           <p><b>Website Development</b></p>
-          <p>Nika Ablao, Carina Crabbe, Sierra Stone, Cindy Xu, Hyun Seo (Lucy) Lee, and Dan Cosley.</p>
+          <p>Nika Ablao, Carina Crabbe, Sierra Stone, Cindy Xu, Hyun Seo (Lucy) Lee, and <a class="fontbig" href="https://infosci.cornell.edu/content/cosley" target=blank>Dan Cosley</a>.</p>
         <p class="lessonsubheader">Sponsors</p>
-          <p>Social Media TestDrive is supported by the generosity of the Morgan Family Foundation and National Science Foundation award #1405634.</p>
+          <p>Social Media TestDrive is supported by the generosity of the <a class="fontbig" href="http://www.morganfamilyfoundation.org/" target=blank>Morgan Family Foundation</a> and <a class="fontbig" href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1405634" target=blank>National Science Foundation award #1405634</a>.</p>
 
       </div>
 
