--- a/about_us.html
+++ b/about_us.html
@@ -38,7 +38,7 @@
           <p><b>Evaluation Director: <a class="fontbig" href="https://communication.cals.cornell.edu/people/amanda-purington/" target=blank>Amanda Purington</a>.</b> Amanda is the Director of Evaluation and Research at ACT for Youth and a graduate student in the Department of Communication at Cornell University.</p>
           <p><b>Application Developer: <a class="fontbig" href="https://communication.cals.cornell.edu/people/anna-spring/" target=blank>Anna Spring</a>.</b> Anna is an Applications Programmer in the Department of Communication at Cornell University.</p>
           <p><b>Development and Testing of TestDrive Prototype</b></p>
-          <p>Jessie Taft, Rhoda Meador, <a class="fontbig" href="https://pryde.bctr.cornell.edu/" target=blank>Program for Research on Youth Development and Engagement (PRYDE)</a>, <a class="fontbig" href="https://www.bctr.cornell.edu/" target=blank>Bronfenbrenner Center for Translational Research, and <a class="fontbig" href="https://nys4-h.org/" target=blank>NYS 4-H</a> educators.</p>
+          <p>Jessie Taft, Rhoda Meador, <a class="fontbig" href="https://pryde.bctr.cornell.edu/" target=blank>Program for Research on Youth Development and Engagement (PRYDE)</a>, <a class="fontbig" href="https://www.bctr.cornell.edu/" target=blank>Bronfenbrenner Center for Translational Research</a>, and <a class="fontbig" href="https://nys4-h.org/" target=blank>NYS 4-H</a> educators.</p>
           <p><b>Curriculum and Content Development</b></p>
           <p>Carmen Chan, Richa Deshpande, Danielle Freedman, Brenna Garcia, Yanni Kaldis, Molly Nagel, Giesha Nunez, Alex Rauter, Emily Schemerhorn, Yutong Zhou, Erin Chen, Kelly Stone, Colton Zuvich, and Ashley Win.</p>
           <p><b>Website Development</b></p>
