--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
         </div>
         <div id="linksCont">
           <a class="customlinks" href="about_us.html"><p>About</p></a>
-          <a class="customlinks" href="lessons.html"><p>Lessons</p></a>
+          <a class="customlinks" href="lessons.html"><p>Modules</p></a>
           <a class="customlinks" href="for_educators.html"><p>For Educators</p></a>
           <a class="customlinks" href="for_parents.html"><p>For Parents</p></a>
-          <a class="customlinks" href="team.html"><p>The Team</p></a>
           <a class="customlinks" href="faq.html"><p>FAQs</p><a>
         </div>
       </div>
@@ -146,10 +145,9 @@
         <div class="footCont_links">
           <a class="footerlinks" href="terms.html"><p>Terms & Copyright</p><a>
           <a class="footerlinks" href="faq.html"><p>FAQs</p><a>
-          <a class="footerlinks" href="team.html"><p>The Team</p></a>
           <a class="footerlinks" href="for_parents.html"><p>For Parents</p></a>
           <a class="footerlinks" href="for_educators.html"><p>For Educators</p></a>
-          <a class="footerlinks" href="lessons.html"><p>Lessons</p></a>
+          <a class="footerlinks" href="lessons.html"><p>Moduals</p></a>
           <a class="footerlinks" href="about_us.html"><p>About</p></a>
         </div>
       </div>
