--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </div>
           <div class="right_half">
             <h1>Learn digital citizenship skills through a social media simulation</h1>
-            <h4>Social Media TestDrive lets students practice digital citizenship skills within a safe and protected platform.</h4>
+            <h4>Social Media TestDrive lets young people practice digital citizenship skills in a simulated, realistic social media environment.</h4>
             <button id="homePage_button" type="button" onclick="window.location.href = 'lessons.html';">View all of our modules </button>
           </div>
         </div>
@@ -147,7 +147,7 @@
           <a class="footerlinks" href="faq.html"><p>FAQs</p><a>
           <a class="footerlinks" href="for_parents.html"><p>For Parents</p></a>
           <a class="footerlinks" href="for_educators.html"><p>For Educators</p></a>
-          <a class="footerlinks" href="lessons.html"><p>Moduals</p></a>
+          <a class="footerlinks" href="lessons.html"><p>Modules</p></a>
           <a class="footerlinks" href="about_us.html"><p>About</p></a>
         </div>
       </div>
