--- a/about_us.html
+++ b/about_us.html
@@ -44,7 +44,7 @@
           <p><b>Website Development</b></p>
           <p>Nika Ablao, Carina Crabbe, Sierra Stone, Cindy Xu, Hyun Seo (Lucy) Lee, and <a class="fontbig" href="https://infosci.cornell.edu/content/cosley" target=blank>Dan Cosley</a>.</p>
         <p class="lessonsubheader">Sponsors</p>
-          <p>Social Media TestDrive is supported by the generosity of the <a class="fontbig" href="http://www.morganfamilyfoundation.org/" target=blank>Morgan Family Foundation</a> and <a class="fontbig" href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1405634" target=blank>National Science Foundation award #1405634</a>.</p>
+          <p>Social Media TestDrive is supported by the generosity of Becky and Jim Morgan and <a class="fontbig" href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1405634" target=blank>National Science Foundation award #1405634</a>.</p>
 
       </div>
 
