--- a/lessons.html
+++ b/lessons.html
@@ -24,7 +24,7 @@
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Is it Private Information?</p>
             <p class="black">This module teaches what is safe to share with different social media audiences and what kind of information is inappropriate to share on social media.</p>
-            <p><span class="black">Aligned Common Sense Lesson:</span> <a id="underline3" href="https://www.commonsense.org/education/digital-citizenship/lesson/chatting-safely-online">Chatting Safely Online</a>
+            <p><span class="black">Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline3" href="https://www.commonsense.org/education/digital-citizenship/lesson/chatting-safely-online">Chatting Safely Online</a>
             </p>
           </div>
         </div></a>
@@ -33,7 +33,7 @@
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Shaping Your Digital Footprint</p>
             <p class="black">This module teaches how actions on social media create a digital footprint and skills to positively shape digital footprints.</p>
-            <p><span class="black">Aligned Common Sense Lesson:</span> <a id="underline5" href="https://www.commonsense.org/education/digital-citizenship/lesson/social-media-and-digital-footprints-our-responsibilities">Social Media and Digital Footprints</a>
+            <p><span class="black">Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline5" href="https://www.commonsense.org/education/digital-citizenship/lesson/social-media-and-digital-footprints-our-responsibilities">Social Media and Digital Footprints</a>
           </div>
         </div></a>
           <a href="https://app.socialmediatestdrive.org/intro/cyberbullying"><div class="lessonsBox">
@@ -41,7 +41,7 @@
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">How to Be an Upstander</p>
             <p class="black">This module teaches how to detect signs of cyberbullying and how to respond when seeing cyberbullying happening to others.</p>
-            <p><span class="black">Aligned Common Sense Lesson:</span> <a id="underline" href="https://www.commonsense.org/education/digital-citizenship/lesson/upstanders-and-allies-taking-action-against-cyberbullying">Upstanders and Allies: Taking Action Against Cyberbullying</a>
+            <p><span class="black">Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline" href="https://www.commonsense.org/education/digital-citizenship/lesson/upstanders-and-allies-taking-action-against-cyberbullying">Upstanders and Allies: Taking Action Against Cyberbullying</a>
             </p>
           </div>
         </div></a>
@@ -50,7 +50,7 @@
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Online Identities</p>
             <p class="black">This module teaches how to manage self-presentation and how online identities can change with different audiences on social media.</p>
-            <p><span class="black">Aligned Common Sense Lesson:</span> <a id="underline4" href="https://www.commonsense.org/education/digital-citizenship/lesson/who-are-you-online">Who Are You Online?</a>
+            <p><span class="black">Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline4" href="https://www.commonsense.org/education/digital-citizenship/lesson/who-are-you-online">Who Are You Online?</a>
             </p>
           </div>
         </div></a>
@@ -59,7 +59,7 @@
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Social Media Privacy</p>
             <p class="black">This module teaches how social media sites collect information about users and offers strategies for protecting privacy on social media.</p>
-            <p><span class="black">Aligned Common Sense Lesson:</span> <a id="underline6" href="https://www.commonsense.org/education/digital-citizenship/lesson/being-aware-of-what-you-share">Being Aware of What You Share</a>
+            <p><span class="black">Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline6" href="https://www.commonsense.org/education/digital-citizenship/lesson/being-aware-of-what-you-share">Being Aware of What You Share</a>
           </div>
         </div></a>
            <a href="https://app.socialmediatestdrive.org/intro/digital-literacy"><div class="lessonsBox">
@@ -67,7 +67,7 @@
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">News in Social Media</p>
             <p class="black">This module teaches why fake news exists and how to identify the telltale signs of fake news on social media.</p>
-            <p><span class="black">Aligned Common Sense Lesson:</span> <a id="underline2" href="https://www.commonsense.org/education/digital-citizenship/lesson/finding-credible-news">Finding Credible News</a>
+            <p><span class="black">Aligned Common Sense Education's Digital Citizenship Lesson:</span> <a id="underline2" href="https://www.commonsense.org/education/digital-citizenship/lesson/finding-credible-news">Finding Credible News</a>
             </p>
           </div>
         </div></a>
