--- a/for_parents.html
+++ b/for_parents.html
@@ -29,7 +29,7 @@
         <p class="lessonsubheader">What is Social Media TestDrive?</p>
           <p>TestDrive is an educational program that offers a number of modules about key digital citizenship topics, such as managing privacy settings, smart self-presentation, upstanding to cyberbullying, and news literacy.</p>
           <p>Each TestDrive module teaches a set of digital citizenship concepts and allows youth to practice and reflect upon what they have learned using a simulated social media experience within a safe and protected platform.</p>
-          <p>TestDrive was created by researchers in the <a class="fontbig" href="http://sml.comm.cornell.edu" target=blank>Cornell University Social Media Lab</a> in collaboration with <a class="fontbig" href="http://commonsense.org/education/" target=blank>Common Sense Education.</a></p>
+          <p>TestDrive was created by researchers in the <a class="fontbig" href="http://sml.comm.cornell.edu" target=blank>Cornell University Social Media Lab</a> in collaboration with <a class="fontbig" href="http://commonsense.org/education/" target=blank>Common Sense Education</a>.</p>
         <p class="lessonsubheader">Who is TestDrive for?</p>
           <p>TestDrive is for middle school-aged youth (ages 9–13) who are new to or not yet engaged with social media, but may enter into the social media world in the near future.</p>
           <p>Children at these ages are aware of and likely becoming interested in social media, but are unlikely to have their own social media accounts, since most social media platforms require members to be at least 13 years old. This is a great time to learn the prosocial skills and behaviors in TestDrive.</p>
